all mixed up, don't know what to do

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Survey - Paddy's Pub Social Network</title>
+	<title>Survey</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<!-- Link static CSS -->
@@ -11,7 +11,7 @@
 <body>
 	<div class="container content">
 		<h1>Survey</h1>
-		<p>Take a quick survey to find your perfect match! These questions are answered by the numbers 1 through 5. If you really, really disagree with the statement, your answer would be 1. If you find a statement to hit extremely close to home, put in a 5.</p>
+		<p>Take the survey to find your ideal friend!</p>
 		<form>
 			<div class="form-group">
 				<input id="name" type="text" class="form-control" placeholder="Name (Required)">
@@ -20,113 +20,113 @@
 				<input id="photo" type="text" class="form-control" placeholder="Link to Profile Photo (Required)">
 			</div>
 			<div class="form-group">
-				<label for="question1">I like to do janitorial work.</label>
+				<label for="question1">I dislike people who wear sunglasses indoors.</label>
 				<select class="form-control" id="question1">
 					<option value="empty"></option>
-					<option value="1">1</option>
-					<option value="2">2</option>
-					<option value="3">3</option>
-					<option value="4">4</option>
-					<option value="5">5</option>
+					<option value="1">1 - Strongly Disagree</option>
+					<option value="2">2 - Disagree Somewhat</option>
+					<option value="3">3 - I don't really care</option>
+					<option value="4">4 - Agree Somewhat</option>
+					<option value="5">5 - Strongly Agree</option>
 				</select>
-			</div>
-			<div class="form-group">
-				<label for="question2">I have some bird-like features (or so I've been told).</label>
-				<select class="form-control" id="question2">
+      </div>
+      <div class="form-group">
+				<label for="question2">I dislike movies starring Sandra Bullock.</label>
+				<select class="form-control" id="question1">
 					<option value="empty"></option>
-					<option value="1">1</option>
-					<option value="2">2</option>
-					<option value="3">3</option>
-					<option value="4">4</option>
-					<option value="5">5</option>
+					<option value="1">1 - Strongly Disagree</option>
+					<option value="2">2 - Disagree Somewhat</option>
+					<option value="3">3 - I don't really care</option>
+					<option value="4">4 - Agree Somewhat</option>
+					<option value="5">5 - Strongly Agree</option>
 				</select>
-			</div>
-			<div class="form-group">
-				<label for="question3">I think very highly of myself.</label>
-				<select class="form-control" id="question3">
+      </div>
+      <div class="form-group">
+				<label for="question3">I dislike vegans.</label>
+				<select class="form-control" id="question1">
 					<option value="empty"></option>
-					<option value="1">1</option>
-					<option value="2">2</option>
-					<option value="3">3</option>
-					<option value="4">4</option>
-					<option value="5">5</option>
+					<option value="1">1 - Strongly Disagree</option>
+					<option value="2">2 - Disagree Somewhat</option>
+					<option value="3">3 - I don't really care</option>
+					<option value="4">4 - Agree Somewhat</option>
+					<option value="5">5 - Strongly Agree</option>
 				</select>
-			</div>
-			<div class="form-group">
-				<label for="question4">I enjoy martial arts.</label>
-				<select class="form-control" id="question4">
+      </div>
+      <div class="form-group">
+				<label for="question4">I dislike crowded places.</label>
+				<select class="form-control" id="question1">
 					<option value="empty"></option>
-					<option value="1">1</option>
-					<option value="2">2</option>
-					<option value="3">3</option>
-					<option value="4">4</option>
-					<option value="5">5</option>
+					<option value="1">1 - Strongly Disagree</option>
+					<option value="2">2 - Disagree Somewhat</option>
+					<option value="3">3 - I don't really care</option>
+					<option value="4">4 - Agree Somewhat</option>
+					<option value="5">5 - Strongly Agree</option>
 				</select>
-			</div>
-			<div class="form-group">
-				<label for="question5">I read as a hobby.</label>
-				<select class="form-control" id="question5">
+      </div>
+      <div class="form-group">
+				<label for="question5">I dislike cooking at home.</label>
+				<select class="form-control" id="question1">
 					<option value="empty"></option>
-					<option value="1">1</option>
-					<option value="2">2</option>
-					<option value="3">3</option>
-					<option value="4">4</option>
-					<option value="5">5</option>
+					<option value="1">1 - Strongly Disagree</option>
+					<option value="2">2 - Disagree Somewhat</option>
+					<option value="3">3 - I don't really care</option>
+					<option value="4">4 - Agree Somewhat</option>
+					<option value="5">5 - Strongly Agree</option>
 				</select>
-			</div>
-			<div class="form-group">
-				<label for="question6">I am God's gift to the opposite sex.</label>
-				<select class="form-control" id="question6">
+      </div>
+      <div class="form-group">
+				<label for="question6">I dislike spicy food.</label>
+				<select class="form-control" id="question1">
 					<option value="empty"></option>
-					<option value="1">1</option>
-					<option value="2">2</option>
-					<option value="3">3</option>
-					<option value="4">4</option>
-					<option value="5">5</option>
+					<option value="1">1 - Strongly Disagree</option>
+					<option value="2">2 - Disagree Somewhat</option>
+					<option value="3">3 - I don't really care</option>
+					<option value="4">4 - Agree Somewhat</option>
+					<option value="5">5 - Strongly Agree</option>
 				</select>
-			</div>
-			<div class="form-group">
-				<label for="question7">I don't so well with the opposite sex.</label>
-				<select class="form-control" id="question7">
+      </div>
+      <div class="form-group">
+				<label for="question7">I dislike participating in events of athleticism.</label>
+				<select class="form-control" id="question1">
 					<option value="empty"></option>
-					<option value="1">1</option>
-					<option value="2">2</option>
-					<option value="3">3</option>
-					<option value="4">4</option>
-					<option value="5">5</option>
+					<option value="1">1 - Strongly Disagree</option>
+					<option value="2">2 - Disagree Somewhat</option>
+					<option value="3">3 - I don't really care</option>
+					<option value="4">4 - Agree Somewhat</option>
+					<option value="5">5 - Strongly Agree</option>
 				</select>
-			</div>
-			<div class="form-group">
-				<label for="question8">I am good with money.</label>
-				<select class="form-control" id="question8">
+      </div>
+      <div class="form-group">
+				<label for="question8">I dislike travelling away from home.</label>
+				<select class="form-control" id="question1">
 					<option value="empty"></option>
-					<option value="1">1</option>
-					<option value="2">2</option>
-					<option value="3">3</option>
-					<option value="4">4</option>
-					<option value="5">5</option>
+					<option value="1">1 - Strongly Disagree</option>
+					<option value="2">2 - Disagree Somewhat</option>
+					<option value="3">3 - I don't really care</option>
+					<option value="4">4 - Agree Somewhat</option>
+					<option value="5">5 - Strongly Agree</option>
 				</select>
-			</div>
-			<div class="form-group">
-				<label for="question9">I work out at the gym often.</label>
-				<select class="form-control" id="question9">
+      </div>
+      <div class="form-group">
+				<label for="question9">I dislike rising early in the morning.</label>
+				<select class="form-control" id="question1">
 					<option value="empty"></option>
-					<option value="1">1</option>
-					<option value="2">2</option>
-					<option value="3">3</option>
-					<option value="4">4</option>
-					<option value="5">5</option>
+					<option value="1">1 - Strongly Disagree</option>
+					<option value="2">2 - Disagree Somewhat</option>
+					<option value="3">3 - I don't really care</option>
+					<option value="4">4 - Agree Somewhat</option>
+					<option value="5">5 - Strongly Agree</option>
 				</select>
-			</div>
-			<div class="form-group">
-				<label for="question10">I consider myself aggressive.</label>
-				<select class="form-control" id="question10">
+      </div>
+      <div class="form-group">
+				<label for="question10">I dislike moustaches.</label>
+				<select class="form-control" id="question1">
 					<option value="empty"></option>
-					<option value="1">1</option>
-					<option value="2">2</option>
-					<option value="3">3</option>
-					<option value="4">4</option>
-					<option value="5">5</option>
+					<option value="1">1 - Strongly Disagree</option>
+					<option value="2">2 - Disagree Somewhat</option>
+					<option value="3">3 - I don't really care</option>
+					<option value="4">4 - Agree Somewhat</option>
+					<option value="5">5 - Strongly Agree</option>
 				</select>
 			</div>
 		</form>
@@ -156,9 +156,9 @@
 
 	<footer>
 		<div class="container">
-			<a href="/api/friends">Discover Friends in Philly API</a>
-			<span>|</span>
-			<a href="https://github.com/yoonslee/FriendFinder">GitHub Repo</a>
+			<a href="/api/friends">Discover Friends in our API</a>
+			<span></span>
+			<a href="https://github.com/AlexKrumins/FriendFinder">GitHub Repository</a>
 		</div>
 	</footer>
 
@@ -174,14 +174,23 @@
 	$("#submitBtn").on("click", function(event) {
 		event.preventDefault();
 		// Form validation
-		var valid = true;
-		if($("#name").val() === "" || $("#photo").val() === "") {
-			valid = false;
-		} else if($("#question1").val() === "empty" || $("#question2").val() === "empty" || $("#question3").val() === "empty" || $("#question4").val() === "empty" || $("#question5").val() === "empty" || $("#question6").val() === "empty" || $("#question7").val() === "empty" || $("#question8").val() === "empty" || $("#question9").val() === "empty" || $("#question10").val() === "empty") {
-			valid = false;
-		}
+		var valid = false;
+    if($("#name").val() !== ""
+      && $("#photo").val() !== "" 
+      && $("#question1").val() !== "empty" 
+      && $("#question2").val() !== "empty" 
+      && $("#question3").val() !== "empty" 
+      && $("#question4").val() !== "empty" 
+      && $("#question5").val() !== "empty" 
+      && $("#question6").val() !== "empty" 
+      && $("#question7").val() !== "empty" 
+      && $("#question8").val() !== "empty" 
+      && $("#question9").val() !== "empty" 
+      && $("#question10").val() !== "empty") {
+        valid = true
+      }
 		if(valid === true) {
-			var newUser = {
+			var newFriend = {
 				name: $("#name").val().trim(),
 				photo: $("#photo").val().trim(),
 				scores: [
@@ -199,7 +208,7 @@
 			};
 			var currentURL = window.location.origin;
 			// Ajax call for receiving response after POST req
-			$.post(currentURL + "/api/friends", newUser, function(data) {
+			$.post(currentURL + "/api/friends", newfriend, function(data) {
 				$("#bestFriend").text(data.name);
 				$("#bestFriendPhoto").attr("src", data.photo);
 				$("#bestFriendModal").modal("toggle");
