--- a/app/public/home.html
+++ b/app/public/home.html
@@ -16,7 +16,7 @@
 		<h1>Negative Nelson's Friend Finder</h1>
 		<p>Find out who dislikes the same things you do!</p>
 
-		<div class="text-center">
+		<div class="text-left">
 			<a href="/survey"><button class="btn btn-lg btn-success">Take Survey</button></a>
 		</div>
 	</div>
